Switch pygeofilter dependency to PyPI package Remove pygeofilter from requirements_dev.txt pygeofilter trequires Alpine build step - add to requirements_build.txt. Remove getter build stage which downloaded pygeofilter source. Remove pygeofilter pip install to stop install from source in build. Add version to pygeofilter in setup.py.

--- a/requirements_build.txt
+++ b/requirements_build.txt
@@ -4,6 +4,7 @@ gunicorn==20.1.0
 uvloop==0.15.2
 httptools==0.2.0
 pyproj==2.6.1
+pygeofilter==0.0.2
 
 # postgresql data source deps
 psycopg2==2.8.6
