Update testing Dockerfile to use apt-get Add requests to requirements-test.txt Remove + from 3.8+ from "Developing" section in readme

--- a/feapi/testing/Dockerfile
+++ b/feapi/testing/Dockerfile
@@ -1,6 +1,7 @@
 FROM feapi
 
-RUN apk add --no-cache --update postgresql-client
+RUN apt-get update && apt-get install -y postgresql-client-11
+RUN rm -rf /var/lib/apt/lists/*
 
 COPY requirements-test.txt /requirements-test.txt
 RUN pip install -r /requirements-test.txt
