Changes based on PR feedback Combine apt-get commands into single RUN statement. Copy requirements files to /opt/$NAME instead of root.

--- a/feapi/testing/Dockerfile
+++ b/feapi/testing/Dockerfile
@@ -1,11 +1,14 @@
 FROM feapi
 
-RUN apt-get update && apt-get install -y postgresql-client-11
-RUN rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    postgresql-client-11 \
+  && rm -rf /var/lib/apt/lists/*
 
-COPY requirements-test.txt /requirements-test.txt
-RUN pip install -r /requirements-test.txt
+WORKDIR /opt/$NAME
+COPY requirements-test.txt requirements-test.txt
+RUN pip install -r requirements-test.txt --no-cache-dir 
 
+WORKDIR /
 RUN mkdir -p /feapi/testing
 COPY data /feapi/testing/data
 COPY integration_tests /feapi/testing/integration_tests
