--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,7 +9,7 @@ services:
                 condition: service_healthy
         environment:
             PGPASSWORD: postgres
-        command: psql -U postgres -h postgres -d postgres -f /oaff/testing/data/sql/schema/schema_management.sql
+        command: psql -U postgres -h postgres -d postgres -f ./oaff/testing/data/sql/schema/schema_management.sql
     api:
         build:
             context: ./oaff/testing
