--- a/.github/workflows/ci-build-push.yml
+++ b/.github/workflows/ci-build-push.yml
@@ -1,10 +1,9 @@
-name: CI
+name: CI Tests, Build, Push to ghcr.io
 
 on:
   push:
     branches:
       - main
-  pull_request:
 
 env:
   DOCKER_REGISTRY: ghcr.io
@@ -50,7 +49,7 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
       -
-        name: Build and push main
+        name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
