Update path in Dockerfile CMD Base image changed from buster to bullseye, causing build issues. Explicitly state base image. Modify postgresql client package name to match bullseye package.

--- a/oaff/testing/Dockerfile
+++ b/oaff/testing/Dockerfile
@@ -1,7 +1,7 @@
 FROM oaff
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    postgresql-client-11 \
+    postgresql-client \
   && rm -rf /var/lib/apt/lists/*
 
 COPY requirements-test.txt ./
