--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,15 +7,13 @@ repos:
     rev: 21.5b1
     hooks:
     - id: black
-      language_version: python3.8
+      language_version: python
 -   repo: https://gitlab.com/pycqa/flake8
     rev: 3.9.2
     hooks:
     - id: flake8
-# -   repo: local
-#     hooks:
-    # custom hook, rather than mypy hook, gives more control over mypy parameters
-    # - id: mypy-executor
-    #   name: MyPy Executor
-    #   entry: ./mypy.sh
-    #   language: system
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.910
+    hooks:
+    - id: mypy
+      language_version: python
